server/compilers/goLiteJS/src/test/ml2/valid/predecl3.go
// shadowing pre-declared mappings
package main

var float64 string = "asdf"
