server/compilers/goLiteJS/src/test/ml2/invalid/cast3.go
// casting strings
package main

var s string = "asdf"
var n int = int(s)
